--- a/laravel/docker/Dockerfile
+++ b/laravel/docker/Dockerfile
@@ -1,23 +1,20 @@
-FROM php:7.4.1-apache
+FROM php:7.4-fpm
 
 WORKDIR /var/www/html
 
-RUN apt-get update && apt-get install -y \
-        libpng-dev \
-        zlib1g-dev \
-        libxml2-dev \
-        libzip-dev \
-        libonig-dev \
-        zip \
-        curl \
-        unzip \
-    && docker-php-ext-configure gd \
-    && docker-php-ext-install -j$(nproc) gd \
-    && docker-php-ext-install pdo_mysql \
-    && docker-php-ext-install mysqli \
-    && docker-php-ext-install zip \
-    && docker-php-source delete
+RUN apt-get update \
+  && apt-get install --quiet --yes --no-install-recommends \
+    libzip-dev \
+    unzip \
+  && docker-php-ext-install pcntl zip pdo pdo_mysql \
+  && pecl install -o -f redis-5.1.1 \
+  && docker-php-ext-enable redis
 
-COPY docker/vhost.conf /etc/apache2/sites-available/000-default.conf
+COPY --from=composer /usr/bin/composer /usr/bin/composer
 
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN groupadd --gid 1000 appuser \
+  && useradd --uid 1000 -g appuser \
+     -G www-data,root --shell /bin/bash \
+     --create-home appuser
+
+USER appuser
