--- a/laravel/docker-compose.yml
+++ b/laravel/docker-compose.yml
@@ -3,23 +3,33 @@ version: '3'
 
 services:
   php:
-    build:
-      context: ./docker # look for Dockerfile in this directory
-      # dockerfile: AnotherNameDockerFile # This is the alternative
-    container_name: customphp
+    # -- FOR PROD --
+    image: atabegruslan/docker4laravel-php:0.0.1
+    environment:
+      # APP_DEBUG: "true"
+      APP_KEY: "base64:SWXterQT+3H2DQNwvOS+k0OhaIccLOfd8+z+P2qId3c="
     volumes:
-      - ./:/var/www/html
+      - ./.env:/var/www/html/.env
+    # -- FOR LOCAL --
+    # build:
+    #   context: ./docker # look for Dockerfile in this directory
+    #   # dockerfile: AnotherNameDockerFile # This is the alternative
+    # container_name: customphp
+    # volumes:
+    #   - ./:/var/www/html
 
-  web: # web talks to php internally thru docker networks
-    image: nginx:1.17
-    working_dir: /var/www/html
-    volumes:
-      - ./:/var/www/html
-      - ./docker/nginx_template_local.conf:/etc/nginx/conf.d/default.conf # Recommended example template: https://laravel.com/docs/7.x/deployment#nginx
+  web:
+    # -- FOR PROD --
+    image: atabegruslan/docker4laravel-nginx:0.0.1
+    # -- FOR LOCAL --
+    # image: nginx:1.17
+    # working_dir: /var/www/html
+    # volumes:
+    #   - ./:/var/www/html
+    #   - ./docker/nginx_template_local.conf:/etc/nginx/conf.d/default.conf # Recommended example template: https://laravel.com/docs/7.x/deployment#nginx
     ports:
-      - "80:80" # outside port:container port. In production, use the standard port 80 for outside port
+      - "80:80"
 
-  # Need to run this first: `docker-compose run —rm node npm install`
   node:
     image: node:12
     user: node # Node image already have an user called node
